--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 DB_CNN="mongodb+srv://nodeexpress:6WuFlkg3yCcJqKWM@cluster0.jv8vh.mongodb.net/hospitaldb"
+JWT_SECRET="klJlkJ#2lkj12@klaskmucnasd23sf32"
