--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3000
-DB_CNN="mongodb+srv://nodeexpress:6WuFlkg3yCcJqKWM@cluster0.jv8vh.mongodb.net/hospitaldb"
+DB_CNN="mongodb+srv://new_leslat:Qha5Ib4qnEj57ieD@cluster0.jv8vh.mongodb.net/hospitaldb"
 JWT_SECRET="klJlkJ#2lkj12@klaskmucnasd23sf32"
+
+GOOGLE_ID=967579472853-kuh9fq11q74776lcreved75gb0rh67g0.apps.googleusercontent.com
+GOOGLE_SECRET=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
